--- a/vercel.json
+++ b/vercel.json
@@ -5,12 +5,8 @@
       "destination": "/assets/img/favicon.png"
     },
     {
-      "source": "/(.*)",
+      "source": "/((?!assets|pages))(.*)",
       "destination": "/"
-    },
-    {
-      "source": "/assets/(.*)",
-      "destination": "/assets/$1"
     }
   ]
 }
