Privacy policy, terms of service and updated version scheme

--- a/assets/data/release.json
+++ b/assets/data/release.json
@@ -1,5 +1,5 @@
 {
-  "version": "14.0 Beta",
-  "build": "24A57",
-  "timestamp": 1722374928327
+  "version": "14.0",
+  "build": "58.1",
+  "timestamp": 1722432306233
 }
