--- a/vercel.json
+++ b/vercel.json
@@ -27,6 +27,17 @@
       "destination": "/me"
     },
     {
+      "source": "/",
+      "has": [
+        {
+          "type": "header",
+          "key": "host",
+          "value": "me.floo.fi"
+        }
+      ],
+      "destination": "/me"
+    },
+    {
       "source": "/.well-known/security.txt",
       "destination": "/security.txt"
     }
