--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,10 @@
 {
+  "regions": ["fra1"],
   "rewrites": [
+    {
+      "source": "/_region",
+      "destination": "/api/region"
+    },
     {
       "source": "/favicon.ico",
       "destination": "/assets/img/favicon.png"
@@ -40,7 +45,7 @@
           "value": "localhost:3000"
         }
       ],
-      "destination": "/app.html"
+      "destination": "/api/index"
     },
     {
       "source": "/.well-known/security.txt",
@@ -48,6 +53,16 @@
     }
   ],
   "redirects": [
+    {
+      "source": "/app.html",
+      "destination": "/",
+      "permanent": true
+    },
+    {
+      "source": "/app.html/",
+      "destination": "/",
+      "permanent": true
+    },
     {
       "source": "/pubkey",
       "destination": "/publickey.txt"
