Add cache support and donate button

--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,16 @@
 {
   "regions": ["fra1"],
+  "headers": [
+    {
+      "source": "/assets/(.*)",
+      "headers": [
+        {
+          "key": "Cache-Control",
+          "value": "public, s-maxage=3600, maxage=86400, stale-while-revalidate=300, stale-if-error=86400"
+        }
+      ]
+    }
+  ],
   "rewrites": [
     {
       "source": "/_region",
