--- a/vercel.json
+++ b/vercel.json
@@ -70,6 +70,10 @@
     {
       "source": "/.well-known/security.txt",
       "destination": "/security.txt"
+    },
+    {
+      "source": "/.well-known/security.sig",
+      "destination": "/security.sig"
     }
   ],
   "redirects": [
